--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cookie-parser": "^1.4.4",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "express-session": "^1.16.2",
+    "mysql": "^2.17.1",
+    "socket.io": "^2.2.0"
   }
 }
